[package]
name = "rustbot"
version = "0.2.0"
authors = ["TheMightyBuzzard <themightybuzzard@soylentnews.org>"]

[[bin]]
name = "rustbot"
path = "src/main.rs"

[dependencies]
lazy_static = "*"
regex = "0.1"
rusqlite = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-serialize = "0.3"
irc = "0.12"
time = "0.1"
rand = "0.3"
rust-crypto = "0.2"
curl = "0.4"
